--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,155 +1,138 @@
-/*
-  The CSS in this style tag is based off of Bear Blog's default CSS.
-  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
-  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
- */
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
 @import "tailwindcss";
 
-:root {
-  --accent: #2337ff;
-  --accent-dark: #000d8a;
-  --black: 15, 18, 25;
-  --gray: 96, 115, 159;
-  --gray-light: 229, 233, 240;
-  --gray-dark: 34, 41, 57;
-  --gray-gradient: rgba(var(--gray-light), 50%), #fff;
-  --box-shadow: 0 2px 6px rgba(var(--gray), 25%),
-    0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
+@theme {
+  --color-primary: #006aff;
+  --color-secondary: #0fb8f0;
+  --color-accent: #ef3434;
+  --color-bg-dark: #020104;
+  --color-bg-light: #04131c;
+  --color-text: #f3eef7;
+  --color-text-muted: #666269;
+  --color-text-blog: #e6e5e6;
+  --color-card: #021636;
+  --color-button: #06384b;
 }
-@font-face {
-  font-family: "Atkinson";
-  src: url("/fonts/atkinson-regular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Atkinson";
-  src: url("/fonts/atkinson-bold.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-body {
-  font-family: "Atkinson", sans-serif;
-  margin: 0;
-  padding: 0;
-  text-align: left;
-  background: linear-gradient(var(--gray-gradient)) no-repeat;
-  background-size: 100% 600px;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  color: rgb(var(--gray-dark));
-  font-size: 20px;
-  line-height: 1.7;
-}
-main {
-  width: 720px;
-  max-width: calc(100% - 2em);
-  margin: auto;
-  padding: 3em 1em;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0 0 0.5rem 0;
-  color: rgb(var(--black));
-  line-height: 1.2;
-}
-h1 {
-  font-size: 3.052em;
-}
-h2 {
-  font-size: 2.441em;
-}
-h3 {
-  font-size: 1.953em;
-}
-h4 {
-  font-size: 1.563em;
-}
-h5 {
-  font-size: 1.25em;
-}
-strong,
-b {
-  font-weight: 700;
-}
-a {
-  color: var(--accent);
-}
-a:hover {
-  color: var(--accent);
-}
-p {
-  margin-bottom: 1em;
-}
-.prose p {
-  margin-bottom: 2em;
-}
-textarea {
-  width: 100%;
-  font-size: 16px;
-}
-input {
-  font-size: 16px;
-}
-table {
-  width: 100%;
-}
-img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 8px;
-}
-code {
-  padding: 2px 5px;
-  background-color: rgb(var(--gray-light));
-  border-radius: 2px;
-}
-pre {
-  padding: 1.5em;
-  border-radius: 8px;
-}
-pre > code {
-  all: unset;
-}
-blockquote {
-  border-left: 4px solid var(--accent);
-  padding: 0 0 0 20px;
-  margin: 0px;
-  font-size: 1.333em;
-}
-hr {
-  border: none;
-  border-top: 1px solid rgb(var(--gray-light));
-}
-@media (max-width: 720px) {
-  body {
-    font-size: 18px;
-  }
-  main {
-    padding: 1em;
+
+@layer base {
+  ::selection {
+    @apply bg-text text-primary;
   }
 }
 
-.sr-only {
-  border: 0;
-  padding: 0;
-  margin: 0;
-  position: absolute !important;
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
-  /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
-  clip: rect(1px 1px 1px 1px);
-  /* maybe deprecated but we need to support legacy browsers */
-  clip: rect(1px, 1px, 1px, 1px);
-  /* modern browsers, clip-path works inwards from each corner */
-  clip-path: inset(50%);
-  /* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
-  white-space: nowrap;
+@layer components {
+  .color-gradient-primary {
+    @apply bg-gradient-to-r from-primary from-30% to-accent text-transparent bg-clip-text inline-block;
+  }
+
+  .color-gradient-secondary {
+    @apply bg-gradient-to-r from-[#1e3a8a] from-20% to-[#0f172a] to-70% shadow-inner;
+  }
+
+  .hamburger-line {
+    @apply w-[30px] h-[2px] my-2 block bg-text;
+  }
+}
+
+@utility heading-700-24 {
+  @apply font-bold text-2xl text-text;
+}
+
+@utility heading-700-20 {
+  @apply font-bold text-xl text-text;
+}
+
+@utility title-600-64 {
+  @apply font-semibold text-6xl text-text;
+}
+
+@utility title-600-48 {
+  @apply font-semibold text-5xl text-text;
+}
+
+@utility heading-600-32 {
+  @apply font-semibold text-4xl text-text;
+}
+
+@utility subtitle-600-24 {
+  @apply font-semibold text-2xl text-text;
+}
+
+@utility subtitle-600-20 {
+  @apply font-semibold text-xl text-text;
+}
+
+@utility subtitle-600-16 {
+  @apply font-semibold text-base text-text;
+}
+
+@utility caption-500-24 {
+  @apply font-medium text-2xl text-text;
+}
+
+@utility caption-500-14 {
+  @apply font-medium text-sm text-text;
+}
+
+@utility caption-500-12 {
+  @apply font-medium text-xs text-text;
+}
+
+@utility body-default-400-16 {
+  @apply font-normal text-base text-text;
+}
+
+@utility body-large-400-18 {
+  @apply font-normal text-lg text-text;
+}
+
+@utility body-small-400-14 {
+  @apply font-normal text-sm text-text;
+}
+
+@utility body-extra-small-400-12 {
+  @apply font-normal text-xs text-text;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Geist", sans-serif;
+}
+
+.hamburger-active > span:nth-child(1) {
+  @apply rotate-45;
+}
+
+.hamburger-active > span:nth-child(2) {
+  @apply scale-0;
+}
+
+.hamburger-active > span:nth-child(3) {
+  @apply -rotate-45;
+}
+
+.header-blog {
+  background-image: url("/images/blog-image-1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+.animate-scroll {
+  animation: scroll 40s linear infinite;
+}
+
+.animate-scroll-mobile {
+  animation: scroll 10s linear infinite;
 }
